alignment fixed

--- a/my-app/src/Components/style.css
+++ b/my-app/src/Components/style.css
@@ -25,7 +25,7 @@ body {
 
 .todotaskbar .formm{
     margin-top: 5px;
-    width: 425px;
+    width: 440px;
     height: 50px;
     font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
